# liquid-wrench

./: .gitignore  Cargo.toml  rustfmt.toml
iofs_wasm/: Cargo.toml
iofs_wasm/src/: lib.rs
src/: binary.rs  lib.rs  main.rs  x86.rs
src/x86/: instr.rs  macros.rs  modrm.rs  prefix.rs  register.rs
src/x86/instr/: add.rs  and.rs  call.rs  clc.rs  cmovcc.rs  cmp.rs  dec.rs  div.rs  inc.rs  jcc.rs  jmp.rs  lea.rs  mov.rs  movaps.rs  movsx.rs  movzx.rs  nop.rs  or.rs  pop.rs  push.rs  ret.rs  sbb.rs  setcc.rs  shift.rs  sub.rs  test.rs  xor.rs  xorps.rs
wasm/: Cargo.toml  test.js
wasm/src/: lib.rs
